Migrate off-heap memory layer from sun.misc.Unsafe to the FFM API
sun.misc.Unsafe is deprecated for removal (JDK 23+). Move all off-heap
memory access to the Foreign Function & Memory API (java.lang.foreign).

- Rewrite Uns on java.lang.foreign, keeping the raw-long-address interface
  via a single all-address MemorySegment with native-order *_UNALIGNED
  layouts (BIG_ENDIAN preserved for directBufferFor / xxhash / serializers).
- Add FFMNativeAllocator: libc malloc/free via FFM downcalls, removing the
  JNA dependency and keeping per-address free and >2GB support.
- Delete UnsExt, UnsExt8, UnsafeAllocator, JNANativeAllocator.
- Require Java 22+ (javac --release 22); run with --enable-native-access.
- Wire a forked TestNG runner so `sbt test` runs the suite; bump jmockit
  1.38 -> 1.49 (1.38 corrupts JDK 22+ nestmates).
- Update UnsTest to drop Unsafe/DirectBuffer in favor of a ByteBuffer oracle.

Resolves #63.